Segfault when reading volumetric clouds example #28722

Closed
opened 2011-09-22 18:11:37 +02:00 by Paul Melis · 7 comments

%%%The blend file referenced from a volumetric clouds example at http://vimeo.com/2272749 crashes blender SVN (trunk, r40299) with a segfault.

URL of the blend file is http://mke3.net/blender/devel/rendering/volumetrics/Clouds2.zip

This is on Gentoo Linux, 32 bit 2.6.39 kernel%%%

%%%The blend file referenced from a volumetric clouds example at http://vimeo.com/2272749 crashes blender SVN (trunk, r40299) with a segfault. URL of the blend file is http://mke3.net/blender/devel/rendering/volumetrics/Clouds2.zip This is on Gentoo Linux, 32 bit 2.6.39 kernel%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev40465. Thanks for the report.%%%

%%%Fixed in svn rev40465. Thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%The loading is fixed, but now I get a segfault during rendering%%%

%%%The loading is fixed, but now I get a segfault during rendering%%%

%%%Corrected fixed goes to svn now.%%%

%%%Corrected fixed goes to svn now.%%%
Author

%%%Okay, renders now, but the image output isn't even close to what is seen vimeo. The volumetric objects are rendered as cubes, as none of the spherical densities seem to get applied. I guess as that blend file was 3 years old some things will have changed in blender since then...%%%

%%%Okay, renders now, but the image output isn't even close to what is seen vimeo. The volumetric objects are rendered as cubes, as none of the spherical densities seem to get applied. I guess as that blend file was 3 years old some things will have changed in blender since then...%%%

%%%Yes, it's totally unrelated on initial issue. All that i can say -- it renders exactly in that way it was configured in. Probably some format was changed since 2.48 or some things are missing now or implemented differently. And i've also failed to render it in the same way even when was testing it in 2.48a.%%%

%%%Yes, it's totally unrelated on initial issue. All that i can say -- it renders exactly in that way it was configured in. Probably some format was changed since 2.48 or some things are missing now or implemented differently. And i've also failed to render it in the same way even when was testing it in 2.48a.%%%
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#28722
No description provided.