Corrected fix for #28722: Segfault when reading volumetric clouds example

Looks like with current implementation voxeldata should always be created
for voxel textures. Remove recently added NULL check and allocate
voxel data when linking a texture.